# fairy_firmware

./: Cargo.toml
firmware/: Cargo.toml
firmware/src/: lib.rs
firmware/src/old_bin/: bitfield.rs  format.rs  levels.rs  overflow.rs  panic.rs
firmware/testsuite/: Cargo.toml
firmware/testsuite/tests/: test.rs
hal/: Cargo.toml
hal/src/: lib.rs
hal/src/pa/: gpio.rs  mod.rs  port_0.rs
hal/src/pa/gpio/: pins.rs
hal/src/pa/port_0/: detectmode.rs  dir.rs  in_.rs  latch.rs  outset.rs  pin_cnf.rs
hal/src/peripherals/gpio/: mod.rs  pins.rs
hal/src/peripherals/port_0/: dirclr.rs  dirset.rs  mod.rs  out.rs  outclr.rs
