[package]
name = "hal"
version = "0.1.0"
authors = ["jaydhelton <jaydhelton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.embedded-hal]
version = "0.2.4"
features = ["unproven"]

[dependencies.void]
version = "1.0.2"
default-features = false

[dependencies.vcell]
version = "0.1"

